Updated for efficiency